--- a/application/views/scripts/booking/priceajax.phtml
+++ b/application/views/scripts/booking/priceajax.phtml
@@ -22,20 +22,20 @@
 
 					<td>Erwachsene:</td>
 					<td><?php echo $this->content['adult'][0]; ?></td>
-					<td><?php echo $this->content['adult'][1]; ?></td>
+					<td><?php echo $this->content['adult'][1]; ?> €</td>
 				</tr>
 					<td>Kinder:</td>
 					<td><?php echo $this->content['child'][0]; ?></td>
-					<td><?php echo $this->content['child'][1]; ?></td>
+					<td><?php echo $this->content['child'][1]; ?> €</td>
 				<tr>
 				</tr>
 					<td>Studenten:</td>
 					<td><?php echo $this->content['student'][0]; ?></td>
-					<td><?php echo $this->content['student'][1]; ?></td>
+					<td><?php echo $this->content['student'][1]; ?> €</td>
 				<tr>
 					<td>Summe:</td>
 					<td></td>
-					<td><?php echo $this->content['sum']; ?></td>
+					<td><?php echo $this->content['sum']; ?> €</td>
 				</tr>
 			</table>
 	<?php endif; ?>
