--- a/application/views/scripts/community/friendrequest.phtml
+++ b/application/views/scripts/community/friendrequest.phtml
@@ -15,4 +15,7 @@
 		<hr />
     <?php endforeach; ?>
 <?php endif; ?>
-
+<br />
+<br />
+<br />
+	<a id="privmessage" href="<?php echo $this->baseUrl . '/user/profile'; ?>"><< Zur&uuml;ck</a>
