--- a/application/views/scripts/community/showmessages.phtml
+++ b/application/views/scripts/community/showmessages.phtml
@@ -30,7 +30,12 @@
 	<br />
 	<br />
 
-
-	<a href="<?php echo $this->baseUrl . '/user/profile'; ?>">Zurück zum Profil</a>
+	<table id="privmessage">
+		<tr>
+			<td><a href="<?php echo $this->baseUrl . '/user/profile'; ?>"><< Zurück zum Profil</a></td>
+			<td><a href="<?php echo $this->baseUrl . '/community/showsendmessages'; ?>">Meine gesendeten Nachrichten</a></td>
+		</tr>
+	</table>
+	
 
 </div>
