--- a/application/views/scripts/game/index.phtml
+++ b/application/views/scripts/game/index.phtml
@@ -83,7 +83,7 @@
 
 		<p>Die Frage existiert nicht.</p>
 		<p>Error: <?php echo $this->errorId; ?>|<?php echo $this->className; ?></p>
-		<a href="<?php echo $this->baseUrl . '/game'; ?>">Nächste Frage</a>
+		<a href="<?php echo $this->baseUrl . '/game'; ?>">Nächste Frage >></a>
 
 	<?php endif; ?>
 </div>
