--- a/application/views/scripts/game/result.phtml
+++ b/application/views/scripts/game/result.phtml
@@ -26,7 +26,7 @@
 
 		switch ($this->rightAnswers) {
 			case 0:
-				echo "Du läufst wohl mit geschlossenen Augen durch den Zoo";
+				echo "Du l&auml;ufst wohl mit geschlossenen Augen durch den Zoo";
 				break;
 			case 1:
 				echo "Du hast den Zoo schon einmal besucht";
@@ -41,7 +41,7 @@
 				echo "Fast alles richtig. Sehr gute Leistung!";
 				break;
 			case 5:
-				echo "Alle Antworten richtig. Du könntest Zoo-Führer werden!";
+				echo "Alle Antworten richtig. Du könntest Zoo-F&uuml;hrer werden!";
 				break;
 		}
 	?>
