--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,1 +1,35 @@
-<h1>Willkommen</h1>
+<div id="main_page">
+
+	<h1>Willkommen</h1>
+
+	<table>
+		<tr>
+			<th colspan="2">Der Fr&uuml;hling im Zoo</th>
+		</tr>
+		<tr>
+			<td><img src="/img/news2.jpg" height="200px"></td>
+			<td id="td1">
+			Der Fr&uuml;hling bringt Schwung ins Tiergehege. 
+			Im Mannheimer Zoo wird gebalzt und gebr&uuml;tet und im Wasser geplanscht. 
+			Viele Tiere tummeln sich wieder in den Freigehegen. 
+			Und der Fr&uuml;hling im Zoo ist auch nicht zu &uuml;berh&ouml;ren: die St&ouml;rche klappern, die Kraniche trompeten und bunte Singv&ouml;gel zwitschern ihre heiteren Paarungsges&auml;nge. </td>
+		</tr>
+	</table>
+	<br />
+	<table>
+		<tr>
+			<th colspan="2">Der Zoo</th>
+		</tr>
+		<tr>
+			<td id="td1">
+				Getreu seinem Leitspruch "Tiere erleben - Natur bewahren" bietet der Zoo Mannheim seinen Besucherinnen und Besuchern<br /> 
+				ein authentisches Tiererlebnis und engagiert sich f&uuml;r den Natur- und Artenschutz.
+			</td>
+			<td>
+				<img src="/img/news1.jpg" height="200px">
+			</td>
+		</tr>
+	</table>
+	
+
+</div>
