--- a/application/views/scripts/user/editdefaultprofile.phtml
+++ b/application/views/scripts/user/editdefaultprofile.phtml
@@ -16,5 +16,6 @@
 <?php endif; ?>
 
 <?php echo $this->form; ?>
-
-<a href="<?php echo $this->baseUrl . '/user/profile'; ?>">Zurück zum Profil</a>
+<br />
+<br />
+<a href="<?php echo $this->baseUrl . '/user/profile'; ?>"><< Zurück zum Profil</a>
