--- a/application/views/scripts/user/editprivate.phtml
+++ b/application/views/scripts/user/editprivate.phtml
@@ -15,3 +15,7 @@
 		<?php echo $this->success; ?>
 	</div>
 <?php endif; ?>
+
+<br />
+<br />
+<a id="privmessage" href="<?php echo $this->baseUrl . '/user/profile'; ?>"><< Zurück zum Profil</a>
