--- a/application/views/scripts/user/profile.phtml
+++ b/application/views/scripts/user/profile.phtml
@@ -27,7 +27,7 @@
 				<col class="tableright">
 			</colgroup>
 			<tr>
-				<td rowspan="3"><a href="<?php echo $this->baseUrl . '/user/editimage'; ?>"><img width="100px" src="<?php echo $this->baseUrl. '/img/uploads/' . $this->profile['image'] . '.jpg'; ?>" alt="Profilbild ändern" id="tablelink"></a></td>
+				<td rowspan="3"><a href="<?php echo $this->baseUrl . '/user/editimage'; ?>"><img width="100px" src="<?php echo $this->baseUrl. '/img/uploads/' . $this->profile['image']; ?>" alt="Profilbild ändern" id="tablelink"></a></td>
 				<td>Vorname:</td>
 				<td><?php echo $this->userData["firstname"]; ?></td>
 			</tr>
