--- a/application/views/scripts/user/changepassword.phtml
+++ b/application/views/scripts/user/changepassword.phtml
@@ -5,7 +5,6 @@
 <h1>Passwort ändern</h1>
 <br />
 <br />
-<br />
 <?php if ($this->success === true): ?>
 	<div class="success">
 		<p>Änderungen gespeichert.</p>
@@ -26,4 +25,6 @@
 
 <?php echo $this->form; ?>
 
-<a href="<?php echo $this->baseUrl . '/user/profile'; ?>">Zurück zum Profil</a>
+<br />
+<br />
+<a id="privmessage" href="<?php echo $this->baseUrl . '/user/profile'; ?>"><< Zurück zum Profil</a>
